<resources>

    <!-- App Name -->
    <string name="app_name">Task</string>

    <!-- Drawer Strings -->
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>

    <!-- Bottom Navigation Titles -->
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>

    <!-- Drawer Menu Titles -->
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>

    <!-- Toolbar Titles -->
    <string name="toolbar_title_home">Home</string>
    <string name="toolbar_title_profile">Profile</string>
    <string name="toolbar_title_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="name_of_the_task">Name of the task</string>
    <string name="name_of_the_action">Name of the action</string>
    <string name="date">Date\t\t</string>
    <string name="priority">Priority</string>
    <string name="id_new_entry">Is New Entry ?</string>
    <string name="submit">Submit</string>
    <string name="due_date">Due Date</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="details">Details</string>
    <string name="workout">Workout</string>
    <string name="diet_plan">Diet Plan</string>
    <string name="todo_attendance">ToDo Report</string>
    <string name="kural">Kural</string>
    <string name="sprint">Sprint</string>
    <string name="add_task">Add Task</string>
    <string name="weight_gain">Weight Gain</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="password">Password</string>
    <string name="learning">Learning</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="edit">Edit</string>
    <string name="_5">5</string>
    <string name="you_don_t_have_to_be_perfect_you_just_have_to_choose_better_today_than_yesterday_that_single_choice_made_daily_rewrites_who_you_are">You don\'t have to be perfect. You just have to choose better today than yesterday. That single choice, made daily, rewrites who you are.</string>
    <string name="your_brain_is_rewiring">Your Brain Is Rewiring</string>
    <string name="_60">60%</string>

</resources>
